modifications in UserController, Reservation, Room, User, UserDto, UserMapper, RandomwordService, UserService